@@ -1,3 +1,7 @@
+2007-01-03  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.threads/tls.exp: Allow stops in sem_post.
+
 2006-12-31  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.base/annota1.exp: Allow .*printf in backtraces.
